# speech-recognition

./: README.md  log.csv  speech-recognition.cabal  stack.yaml
benchmarks/: Bench.hs
executables/: Main.hs
python/: gstt.py  log.csv  test.flac
sources/: Recognition.hs
sources/Recognition/: Example.hs  Extra.hs  Google.hs  Types.hs
sources/Recognition/Google/: Types.hs
tests/: DocTest.hs
tests/Recognition/: Test.hs
